[metadata]
name = behave-xray
version = 0.0.4
url = https://github.com/fundakol/behave-xray
author = Lukasz Fundakowski
author_email = fundakol@yahoo.com
description = Behave JIRA XRAY results uploader
long_description=file: README.md
long_description_content_type=text/markdown
python_requires = >= 3.7
keywords = behave JIRA XRAY
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    behave
    requests

[options.packages.find]
where = src
