[metadata]
name = behave-xray
url = https://github.com/fundakol/behave-xray
author = Lukasz Fundakowski
author_email = fundakol@yahoo.com
description = Behave JIRA XRAY results uploader
long_description=file: README.md
long_description_content_type = text/markdown
python_requires = >= 3.7
keywords = behave JIRA XRAY
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
install_requires =
    behave
    requests

[options.packages.find]
where = src

[flake8]
max-line-length = 120

[isort]
profile = black
src_paths = src,tests
filter_files = True
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 88
